# galaxy-fds-sdk-cpp

./: CMakeLists.txt  README.md
include/: constants.h  fds_client_configuration.h  galaxy_fds.h  galaxy_fds_client.h  galaxy_fds_client_exception.h
include/internal/: utils.h
include/model/: access_control_list.h  action.h  delete_multi_objects_result.h  fds_bucket.h  fds_object.h  fds_object_listing.h  fds_object_metadata.h  fds_object_metadata_bean.h  fds_object_summary.h  owner.h  put_object_result.h  quota_policy.h  sub_resource.h
include/signer/: base64.h  signer.h
sample/: CMakeLists.txt  sample.cpp
src/: access_control_list.cpp  action.cpp  base64.cc  constants.cpp  delete_multi_objects_result.cpp  fds_client_configuration.cpp  fds_object_listing.cpp  fds_object_metadata.cpp  fds_object_metadata_bean.cpp  galaxy_fds_client.cpp  owner.cpp  put_object_result.cpp  quota_policy.cpp  signer.cc  sub_resource.cpp
test/: CMakeLists.txt  fds_client_configuration_test.cpp  fds_model_test.cpp  fds_test_common.h  galaxy_fds_client_test.cpp
